--- a/MyStopMonitor/Base.lproj/Main.storyboard
+++ b/MyStopMonitor/Base.lproj/Main.storyboard
@@ -281,8 +281,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wlq-BN-ds8">
+                                <rect key="frame" x="0.0" y="104" width="320" height="415"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VAH-uI-OIK">
-                                <rect key="frame" x="6" y="58" width="309" height="29"/>
+                                <rect key="frame" x="6" y="43" width="309" height="29"/>
                                 <segments>
                                     <segment title="Welcome"/>
                                     <segment title="About StopMonitor"/>
@@ -291,19 +295,15 @@
                                     <action selector="indexChanged:" destination="woo-R8-NMs" eventType="valueChanged" id="UTT-cz-eBy"/>
                                 </connections>
                             </segmentedControl>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wlq-BN-ds8">
-                                <rect key="frame" x="0.0" y="103" width="320" height="415"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="wlq-BN-ds8" secondAttribute="trailing" id="A4f-hp-N5J"/>
                             <constraint firstItem="VAH-uI-OIK" firstAttribute="leading" secondItem="aYm-f3-4xd" secondAttribute="leadingMargin" constant="-10" id="Avw-E0-zUX"/>
-                            <constraint firstItem="okf-TZ-UWc" firstAttribute="top" secondItem="wlq-BN-ds8" secondAttribute="bottom" constant="1" id="F8X-hZ-7A1"/>
+                            <constraint firstItem="okf-TZ-UWc" firstAttribute="top" secondItem="wlq-BN-ds8" secondAttribute="bottom" id="F8X-hZ-7A1"/>
                             <constraint firstItem="wlq-BN-ds8" firstAttribute="centerX" secondItem="VAH-uI-OIK" secondAttribute="centerX" id="MNG-Td-Y8S"/>
-                            <constraint firstItem="wlq-BN-ds8" firstAttribute="top" secondItem="VAH-uI-OIK" secondAttribute="bottom" constant="17" id="hbf-Cy-itv"/>
-                            <constraint firstItem="VAH-uI-OIK" firstAttribute="top" secondItem="GI0-jy-d6B" secondAttribute="bottom" constant="38" id="u23-aI-PJ9"/>
+                            <constraint firstItem="wlq-BN-ds8" firstAttribute="top" secondItem="VAH-uI-OIK" secondAttribute="bottom" constant="33" id="hbf-Cy-itv"/>
+                            <constraint firstItem="VAH-uI-OIK" firstAttribute="top" secondItem="GI0-jy-d6B" secondAttribute="bottom" constant="23" id="u23-aI-PJ9"/>
                             <constraint firstItem="wlq-BN-ds8" firstAttribute="leading" secondItem="aYm-f3-4xd" secondAttribute="leading" id="vzE-PO-fS0"/>
                         </constraints>
                     </view>
