--- a/MyStopMonitor/Base.lproj/Main.storyboard
+++ b/MyStopMonitor/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="tuX-2E-4F1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="tuX-2E-4F1">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -298,13 +298,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="wlq-BN-ds8" secondAttribute="trailing" id="A4f-hp-N5J"/>
-                            <constraint firstItem="VAH-uI-OIK" firstAttribute="leading" secondItem="aYm-f3-4xd" secondAttribute="leadingMargin" constant="-10" id="Avw-E0-zUX"/>
-                            <constraint firstItem="okf-TZ-UWc" firstAttribute="top" secondItem="wlq-BN-ds8" secondAttribute="bottom" id="F8X-hZ-7A1"/>
-                            <constraint firstItem="wlq-BN-ds8" firstAttribute="centerX" secondItem="VAH-uI-OIK" secondAttribute="centerX" id="MNG-Td-Y8S"/>
-                            <constraint firstItem="wlq-BN-ds8" firstAttribute="top" secondItem="VAH-uI-OIK" secondAttribute="bottom" constant="33" id="hbf-Cy-itv"/>
-                            <constraint firstItem="VAH-uI-OIK" firstAttribute="top" secondItem="GI0-jy-d6B" secondAttribute="bottom" constant="23" id="u23-aI-PJ9"/>
-                            <constraint firstItem="wlq-BN-ds8" firstAttribute="leading" secondItem="aYm-f3-4xd" secondAttribute="leading" id="vzE-PO-fS0"/>
+                            <constraint firstItem="VAH-uI-OIK" firstAttribute="top" secondItem="GI0-jy-d6B" secondAttribute="bottom" constant="23" id="3Tr-Qo-m0e"/>
+                            <constraint firstAttribute="trailing" secondItem="wlq-BN-ds8" secondAttribute="trailing" id="6Mn-WM-yIU"/>
+                            <constraint firstItem="wlq-BN-ds8" firstAttribute="centerX" secondItem="VAH-uI-OIK" secondAttribute="centerX" id="Htb-D9-bWk"/>
+                            <constraint firstItem="wlq-BN-ds8" firstAttribute="top" secondItem="VAH-uI-OIK" secondAttribute="bottom" constant="33" id="INJ-Ml-bGH"/>
+                            <constraint firstItem="wlq-BN-ds8" firstAttribute="bottom" secondItem="okf-TZ-UWc" secondAttribute="top" id="S2x-38-hKd"/>
+                            <constraint firstItem="wlq-BN-ds8" firstAttribute="leading" secondItem="aYm-f3-4xd" secondAttribute="leading" id="ZVi-q1-UIe"/>
+                            <constraint firstItem="VAH-uI-OIK" firstAttribute="leading" secondItem="aYm-f3-4xd" secondAttribute="leadingMargin" constant="-10" id="skq-PB-dgC"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" tag="1" title="Info" image="infoIcon.png" id="AxH-E2-FiW"/>
@@ -509,7 +509,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Station Name." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f1g-Lo-SD6">
                                 <rect key="frame" x="13" y="344" width="298" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="vxd-Eo-sbT"/>
+                                    <constraint firstAttribute="height" constant="21" id="QP0-3q-rY5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="18"/>
                                 <color key="textColor" red="0.29803922772407532" green="0.29803922772407532" blue="0.29803922772407532" alpha="1" colorSpace="calibratedRGB"/>
@@ -518,7 +518,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Station stop type." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DEG-DI-g2Z">
                                 <rect key="frame" x="13" y="380" width="298" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="5z0-Ry-1Tm"/>
+                                    <constraint firstAttribute="height" constant="21" id="WH7-G7-hya"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="18"/>
                                 <color key="textColor" red="0.29803922772407532" green="0.29803922772407532" blue="0.29803922772407532" alpha="1" colorSpace="calibratedRGB"/>
@@ -527,7 +527,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Station stop Distance " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L98-1d-gBf">
                                 <rect key="frame" x="13" y="409" width="298" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="7zg-ka-1db"/>
+                                    <constraint firstAttribute="height" constant="21" id="fDG-rJ-hmX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="18"/>
                                 <color key="textColor" red="0.29803922772407532" green="0.29803922772407532" blue="0.29803922772407532" alpha="1" colorSpace="calibratedRGB"/>
@@ -536,19 +536,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="0KK-mf-Hdq" firstAttribute="top" secondItem="df3-OL-38D" secondAttribute="bottom" constant="3" id="36V-fS-OID"/>
-                            <constraint firstItem="f1g-Lo-SD6" firstAttribute="trailing" secondItem="DEG-DI-g2Z" secondAttribute="trailing" id="3Ly-hK-Gze"/>
-                            <constraint firstItem="f1g-Lo-SD6" firstAttribute="top" secondItem="0KK-mf-Hdq" secondAttribute="bottom" constant="17" id="A3p-5P-LxU"/>
-                            <constraint firstItem="Rth-Jd-4Mj" firstAttribute="top" secondItem="L98-1d-gBf" secondAttribute="bottom" constant="89" id="AHy-7k-Rnv"/>
-                            <constraint firstItem="L98-1d-gBf" firstAttribute="top" secondItem="DEG-DI-g2Z" secondAttribute="bottom" constant="8" symbolic="YES" id="BOP-A5-Nmh"/>
-                            <constraint firstItem="0KK-mf-Hdq" firstAttribute="leading" secondItem="16Y-dA-FMF" secondAttribute="leadingMargin" constant="4" id="EAL-rt-lMB"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="f1g-Lo-SD6" secondAttribute="trailing" constant="-7" id="Mq0-Ru-nEL"/>
-                            <constraint firstItem="0KK-mf-Hdq" firstAttribute="centerX" secondItem="16Y-dA-FMF" secondAttribute="centerX" id="OQv-s4-UpX"/>
-                            <constraint firstItem="DEG-DI-g2Z" firstAttribute="trailing" secondItem="L98-1d-gBf" secondAttribute="trailing" id="S1Z-px-jtN"/>
-                            <constraint firstItem="DEG-DI-g2Z" firstAttribute="leading" secondItem="L98-1d-gBf" secondAttribute="leading" id="Vff-2S-3L3"/>
-                            <constraint firstItem="DEG-DI-g2Z" firstAttribute="top" secondItem="f1g-Lo-SD6" secondAttribute="bottom" constant="15" id="gxx-dx-Iii"/>
-                            <constraint firstItem="f1g-Lo-SD6" firstAttribute="leading" secondItem="16Y-dA-FMF" secondAttribute="leadingMargin" constant="-3" id="xpG-hL-XaI"/>
-                            <constraint firstItem="DEG-DI-g2Z" firstAttribute="leading" secondItem="f1g-Lo-SD6" secondAttribute="leading" id="yPu-wy-MPc"/>
+                            <constraint firstItem="f1g-Lo-SD6" firstAttribute="trailing" secondItem="DEG-DI-g2Z" secondAttribute="trailing" id="4AZ-PZ-IH4"/>
+                            <constraint firstItem="L98-1d-gBf" firstAttribute="top" secondItem="DEG-DI-g2Z" secondAttribute="bottom" constant="8" symbolic="YES" id="63J-Vl-ytA"/>
+                            <constraint firstItem="DEG-DI-g2Z" firstAttribute="leading" secondItem="f1g-Lo-SD6" secondAttribute="leading" id="6BK-af-17G"/>
+                            <constraint firstItem="0KK-mf-Hdq" firstAttribute="centerX" secondItem="16Y-dA-FMF" secondAttribute="centerX" id="CS3-Vt-ZEw"/>
+                            <constraint firstItem="0KK-mf-Hdq" firstAttribute="top" secondItem="df3-OL-38D" secondAttribute="bottom" constant="3" id="E7U-cr-of6"/>
+                            <constraint firstItem="DEG-DI-g2Z" firstAttribute="leading" secondItem="L98-1d-gBf" secondAttribute="leading" id="b3m-KQ-Mm2"/>
+                            <constraint firstItem="Rth-Jd-4Mj" firstAttribute="top" secondItem="L98-1d-gBf" secondAttribute="bottom" constant="89" id="g70-qR-FgM"/>
+                            <constraint firstItem="DEG-DI-g2Z" firstAttribute="trailing" secondItem="L98-1d-gBf" secondAttribute="trailing" id="gpu-YH-SJU"/>
+                            <constraint firstItem="0KK-mf-Hdq" firstAttribute="leading" secondItem="16Y-dA-FMF" secondAttribute="leadingMargin" constant="4" id="hYi-8o-46R"/>
+                            <constraint firstItem="f1g-Lo-SD6" firstAttribute="leading" secondItem="16Y-dA-FMF" secondAttribute="leadingMargin" constant="-3" id="omu-Aj-pbT"/>
+                            <constraint firstItem="DEG-DI-g2Z" firstAttribute="top" secondItem="f1g-Lo-SD6" secondAttribute="bottom" constant="15" id="tP6-ha-seV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="f1g-Lo-SD6" secondAttribute="trailing" constant="-7" id="wI4-V1-g62"/>
+                            <constraint firstItem="f1g-Lo-SD6" firstAttribute="top" secondItem="0KK-mf-Hdq" secondAttribute="bottom" constant="17" id="xbr-Qp-9cC"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Alarm Stop Map" id="Y6o-Jq-96I"/>
